--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.6.3",
     "formik": "^2.2.9",
+    "material-ui-popup-state": "^1.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
