--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-toastify": "^8.0.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
@@ -52,7 +52,7 @@
     "gh-pages": "^3.2.3"
   },
   "engines": {
-    "node": "10.x",
+    "node": "14.17.3",
     "npm": "6.x"
   }
 }
