--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tarnilok.github.io/react-frontend-milestoneproject",
+  "homepage": "/",
   "name": "react-frontend-milestoneproject",
   "version": "0.1.0",
   "private": true,
